--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "snap-branch",
   "displayName": "Snap Branch",
   "description": "Automatically save and restore workspace configurations per Git branch",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "publisher": "QuentinRomeroLauro",
   "repository": {
     "type": "git",
@@ -80,6 +80,11 @@
           "type": "boolean",
           "default": true,
           "description": "Show branch configuration status in status bar"
+        },
+        "snapBranch.includeWorkspaceSettings": {
+          "type": "boolean",
+          "default": false,
+          "description": "Include workspace settings in configuration (will modify .vscode/settings.json when enabled)"
         }
       }
     }
